# python-nov-26

./: README.md  advance_concept2.ipynb  advance_concepts.ipynb  class_practice2.ipynb  classes_and_objects-mod.ipynb  classes_and_objects.ipynb  classes_practice.ipynb  conditions.ipynb  data_types.ipynb  decorators.ipynb  functions.ipynb  functions_comprehensive.ipynb  genai_advertisment.ipynb  iterators_and_genrators.ipynb  list.ipynb  list_comprehension.ipynb  llm_gemini.ipynb  llm_groq.ipynb  llm_ollama.ipynb  loops.ipynb  model_routing.ipynb  movie_advertisment.ipynb  operations.ipynb  pyproject.toml  string_operations.ipynb  strings_genai_tutorial.ipynb  tata_motors_oop_tutorial.ipynb
