[project]
name = "python-genai-tutorial"
version = "0.1.0"
description = "A Python tutorial series for Generative AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "python-dotenv>=1.2.1",
]
